# augment3d

./: CMakeLists.gflags.txt  CMakeLists.txt  README.md  augment3d.cpp  test_transforms.cpp  transforms.cpp  transforms.h
augment3d/: augment3d.cpp  base_transformer.cpp  base_transformer.h  flags.h  reflect_transformer.cpp  reflect_transformer.h  rotate_transformer.cpp  rotate_transformer.h  scale_transformer.cpp  scale_transformer.h  transformers.h
augment3d/test/: test_base_transformer.cpp  test_reflect_transformer.cpp  test_rotate_transformer.cpp  test_scale_transformer.cpp
